--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
+    "@types/three": "^0.158.3",
     "three": "^0.158.0"
   },
   "devDependencies": {
+    "typescript": "^5.3.2",
     "vite": "^5.0.2"
   }
 }
