--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
+    "@google-cloud/speech": "^6.1.0",
     "@types/three": "^0.158.3",
-    "three": "^0.158.0"
+    "three": "^0.158.0",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "typescript": "^5.3.2",
