--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
     "@google-cloud/speech": "^6.1.0",
     "@types/three": "^0.158.3",
     "axios": "^1.6.8",
+    "requirejs": "^2.3.6",
     "three": "^0.158.0",
     "ws": "^8.16.0"
   },
   "devDependencies": {
+    "@types/node": "^20.12.2",
     "typescript": "^5.4.3",
     "vite": "^5.2.7"
   }
