--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,17 @@
 {
     "compilerOptions": {
-        "module": "amd",
+        "module": "es6",
         "sourceMap": true,
-        "target": "es5",
+        "target": "es6",
         "moduleResolution": "node",
         "outDir": "public/js",
         "types": [
-            "requirejs",
+            "node",
             "three"
         ],
         "lib": [
             "dom",
-            "es2015"
+            "es2016"
         ]
     },
     "exclude": [
