--- a/package.json
+++ b/package.json
@@ -1,19 +1,34 @@
 {
-  "dependencies": {
+  "name": "rezep-frontend",
+  "version": "1.0.0",
+  "description": "",
+  "scripts": {
+    "build": "webpack --config ./src/client/webpack.prod.js",
+    "dev": "webpack serve --config ./src/client/webpack.dev.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./dist/server/server.js"
+  },
+  "author": "Paul Nell",
+  "devDependencies": {
     "@google-cloud/speech": "^6.1.0",
-    "@types/three": "^0.158.3",
     "axios": "^1.6.8",
     "express": "^4.19.2",
     "http": "^0.0.1-security",
     "path": "^0.12.7",
     "requirejs": "^2.3.6",
-    "three": "^0.158.0",
     "tsc": "^2.0.4",
-    "ws": "^8.16.0"
+    "ws": "^8.16.0",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.0",
+    "@types/three": "^0.160.0",
+    "three": "^0.160.0",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.3",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
-  "devDependencies": {
-    "@types/node": "^20.12.2",
-    "typescript": "^5.4.3",
-    "vite": "^5.2.7"
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
