--- a/package.json
+++ b/package.json
@@ -11,24 +11,25 @@
   "author": "Paul Nell",
   "devDependencies": {
     "@google-cloud/speech": "^6.1.0",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.0",
+    "@types/three": "^0.160.0",
     "axios": "^1.6.8",
     "express": "^4.19.2",
     "http": "^0.0.1-security",
     "path": "^0.12.7",
     "requirejs": "^2.3.6",
-    "tsc": "^2.0.4",
-    "ws": "^8.16.0",
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.11.0",
-    "@types/three": "^0.160.0",
     "three": "^0.160.0",
     "ts-loader": "^9.5.1",
+    "tsc": "^2.0.4",
     "typescript": "^5.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "ws": "^8.16.0",
+    "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "webpack-dev-server": "^5.0.4"
   }
 }
