--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "typescript": "^5.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
-    "ws": "^8.16.0",
-    "webpack-dev-server": "^5.0.4"
+    "webpack-dev-server": "^5.0.4",
+    "ws": "^8.16.0"
   },
   "dependencies": {
     "express": "^4.18.2",
+    "stream": "^0.0.2",
     "webpack-dev-server": "^5.0.4"
   }
 }
