--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@google-cloud/speech": "^6.1.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.0",
+    "@types/socket.io-client": "^3.0.0",
     "@types/three": "^0.160.0",
     "axios": "^1.6.8",
     "express": "^4.19.2",
@@ -30,6 +31,9 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "package-name": "^0.1.0",
+    "socket.io-client": "^4.7.5",
+    "socketio": "^1.0.0",
     "stream": "^0.0.2",
     "webpack-dev-server": "^5.0.4"
   }
