--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ws": "^8.16.0"
   },
   "dependencies": {
+    "@types/webspeechapi": "^0.0.29",
     "express": "^4.18.2",
     "stream": "^0.0.2",
     "webpack-dev-server": "^5.0.4"
