--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@types/webspeechapi": "^0.0.29",
     "express": "^4.18.2",
+    "rxjs": "^7.8.1",
     "stream": "^0.0.2",
     "webpack-dev-server": "^5.0.4"
   }
