--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "ws": "^8.16.0"
   },
   "dependencies": {
+    "@types/html2canvas": "^1.0.0",
     "express": "^4.18.2",
+    "html2canvas": "^1.4.1",
     "package-name": "^0.1.0",
     "socket.io-client": "^4.7.5",
     "socketio": "^1.0.0",
