--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express": "^4.18.2",
     "html2canvas": "^1.4.1",
     "package-name": "^0.1.0",
+    "rxjs": "^7.8.1",
     "socket.io-client": "^4.7.5",
     "socketio": "^1.0.0",
     "stream": "^0.0.2",
