--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "ws": "^8.16.0"
   },
   "dependencies": {
+    "@microsoft/signalr": "^8.0.0",
+    "@types/signalr": "^2.4.3",
     "express": "^4.18.2",
     "stream": "^0.0.2",
     "webpack-dev-server": "^5.0.4"
