--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "webpack --config ./src/client/webpack.prod.js",
+    "build": "webpack --config ./src/client/webpack.common.js",
     "dev": "webpack serve --config ./src/client/webpack.dev.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./dist/server/server.js"
   },
   "author": "Paul Nell",
@@ -17,6 +16,7 @@
     "@types/three": "^0.160.0",
     "axios": "^1.6.8",
     "express": "^4.19.2",
+    "firebase-tools": "^13.22.1",
     "http": "^0.0.1-security",
     "path": "^0.12.7",
     "requirejs": "^2.3.6",
@@ -31,13 +31,13 @@
   },
   "dependencies": {
     "@types/html2canvas": "^1.0.0",
+    "@types/webspeechapi": "^0.0.29",
+    "express": "^4.18.2",
     "html2canvas": "^1.4.1",
     "package-name": "^0.1.0",
     "rxjs": "^7.8.1",
     "socket.io-client": "^4.7.5",
     "socketio": "^1.0.0",
-    "@types/webspeechapi": "^0.0.29",
-    "express": "^4.18.2",
     "stream": "^0.0.2",
     "webpack-dev-server": "^5.0.4"
   }
