--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
-    "axios": "^1.7.9"
+    "axios": "^1.7.9",
+    "qrcode": "^1.5.4",
+    "qrcode-generator": "^1.4.4"
   }
 }
